RESOLVED FIXED209005
REGRESSION (r257938): Some pointerevents/ios/touch-action-region tests started to fail
https://bugs.webkit.org/show_bug.cgi?id=209005
Summary REGRESSION (r257938): Some pointerevents/ios/touch-action-region tests starte...
Simon Fraser (smfr)
Reported 2020-03-12 10:59:32 PDT
REGRESSION (r257938): Some pointerevents/ios/touch-action-region tests started to fail
Attachments
Patch (4.72 KB, patch)
2020-03-12 11:00 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2020-03-12 11:00:58 PDT
Simon Fraser (smfr)
Comment 2 2020-03-12 11:01:01 PDT
Simon Fraser (smfr)
Comment 3 2020-03-12 11:24:17 PDT
Note You need to log in before you can comment on or make changes to this bug.