REGRESSION (r257938): Some pointerevents/ios/touch-action-region tests started to fail https://bugs.webkit.org/show_bug.cgi?id=209005 <rdar://problem/60337239>

Reviewed by Tim Horton, Wenson Hsieh.

Source/WebCore:

We need to continue to paint event regions if there are touch-action elements.

Tested by existing tests.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateEventRegion):

LayoutTests:

New baselines for tests with overflow:scroll, where the scrolled container gets
a rectangular event region.

* pointerevents/ios/touch-action-region-backing-sharing-expected.txt:
* pointerevents/ios/touch-action-region-overflow-expected.txt:

Canonical link: https://commits.webkit.org/221910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258342 268f45cc-cd09-0410-ab3c-d52691b4dbfc